- Added code for sorting files in editor popup windows
- Changed lesson selectbox to autocomplete field in copy from another lesson
- Fixed basic info in course reports for excel exporting
- Extended api to consider custom user profile fields for creating user
- Fixed issue in getForumTree()(#1354)
- Added comments field to user's profile page
- Added option for allowing students to send messages
- Fixed issue in external survey about background color
- Fixed issue when exporting reports not taking into account the sub-branches checkbox
- Fixed issue about expanding a category after collapsing all in catalog (#1332)
- Fixed issue about not talking into account course lessons scheduling in catalog
- Removed scheduling icon in control panel for course lessons
- Added check in landing page in case of inactive module
- Fixed module chat for different user timezones
- Course lessons in unique mode can now be edited even if inactive
- Fixed publish page of surveys not taking into account archived users
- Added a check for possible existing token in api2
- Added option for deleting old api tokens (over one month) in maintenance
- Fixed email account activation not working
- Fixed issue about toggling blocks twice (#1382)
- Fixed profile page not keeping custom avatar
- Tests info in excel export of lesson reports no longer truncates questions
- You can no longer create subforums in locked forums
- Fixed issue about copying from another lesson (#1383)
- Fixed administrator not being able to activate self-registered users set to "pending"
- Fixed potential security issue in loading javascript files

=== Version 3.6.9 build 10697 ===
- Fixed subforum/topics count in forums list
- Fixed personal profile fields appearing even if meaningless
- Fixed mapped accounts disregarding system setting
- Fixed clicking on icons including a link with popups, does not load the popup
- Fixed resume test